--- a/실습2/index.html
+++ b/실습2/index.html
@@ -8,7 +8,21 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- 아래에 코드를 작성하세요. -->
-
+  <div class="card">
+    <img src="images/product.webp">
+    <p style="color:gray; padding-bottom: 3px;">블루밍홈</p>
+    <p><b>젤리아 인테리어의자 식탁의자 FAB 5colors</b></p>
+    <p style="font-size: 20px;">
+      <b>
+      <span style="color: skyblue;">30%</span>
+      23,900
+      </b>
+    </p>
+    <p>
+      <b>
+        4.6 <span style="color: gray;">리뷰 823</span>
+      </b>
+    </p>
+  </div>
 </body>
 </html>
