--- a/실습1_flex/index.html
+++ b/실습1_flex/index.html
@@ -8,7 +8,31 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- 아래에 코드를 작성하세요. -->
-
+  <div class="flex-container">
+    <h2>
+      <span style="font-size: 12px;">ALL ABOUT</span>
+      <br>BESPOKE 김치플러스 Infinite Line
+    </h2>
+    <div class="cards">
+      <div class="card">
+        <img src="images/1.webp">
+        <p>
+          INSTALLATION<br>
+          <span style="color: black; font-weight: bold; font-size: 16px;">BESPOKE Infinite Line 단독 설치 가이드</span><br>
+          내게 딱 맞는 조합과 컬러를 선택했지만,<br>
+          우리 집 설치 공간과 맞을지 고민이라면 확인해보세요.
+        </p>
+      </div>
+      <div class="card">
+        <img src="images/2.webp">
+        <p>
+          INSTALLATION<br>
+          <span style="color: black; font-weight: bold; font-size: 16px;">BESPOKE Infinite Line 페어 설치 가이드</span><br>
+          내게 딱 맞는 조합과 컬러를 선택했지만,<br>
+          우리 집 설치 공간과 맞을지 고민이라면 확인해보세요.
+        </p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
