--- a/실습2_flex/index.html
+++ b/실습2_flex/index.html
@@ -8,7 +8,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- 아래에 코드를 작성하세요. -->
-
+  <div class="flex-container">
+    <div class="card">
+      <img src="images/product.webp">
+      <h3><span style="color: gray;">블루밍홈</span><br>
+        젤리아 인테리어의자 식탁의자 FAB 5colors
+      </h3>
+      <p style="font-size: 24px;">
+        <span style="color:skyblue">30%</span> 23,900
+      </p>
+      <p style="font-size: 14px;">
+        4.6 <span style="color: gray;">리뷰 823</span>
+      </p>
+    </div>
+  </div>
 </body>
 </html>
