--- a/실습3/index.html
+++ b/실습3/index.html
@@ -9,6 +9,53 @@
   <title>HPHK APPAREL</title>
 </head>
 <body>
- 
+  <div class="wrap">
+    <header>
+      <div class="container">
+        <h1>APPAREL SHOP</h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="products.html">PRODUCTS</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="banner"></div>
+    <div class="main">
+      <div class="about">
+        <img src="assets/apparel2.jpeg">
+        <div>
+          <h2>About Our Company</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est laboriosam qui architecto facilis commodi enim a neque voluptatibus autem culpa ex, ea saepe nihil quidem id reprehenderit numquam cum corporis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor perspiciatis asperiores consequuntur cumque voluptatibus dolorum suscipit perferendis molestiae optio esse ad impedit illum totam maxime quam beatae, quia unde dolorem.</p>
+        </div>
+      </div>
+      <h2>More</h2>
+      <div class="more">
+        <div>
+          <img src="assets/email.png">
+          <p>Email Address</p>
+          <p>hphker@hphk.kr</p>
+        </div>
+        <div>
+          <img src="assets/telephone.png">
+          <p>Phone Number</p>
+          <p>010-1234-5678</p>
+        </div>
+        <div>
+          <img src="assets/location.png">
+          <p>Location</p>
+          <p>서울특별시</p>
+        </div>
+        <div>
+          <img src="assets/clock.png">
+          <p>Working Hours</p>
+          <p>9am - 6pm</p>
+        </div>
+      </div>
+    </div>
+    <a class="top-btn" href="#"><img src="assets/up-arrow.png" width="30rem"></a>
+  </div>
+
 </body>
 </html>
