--- a/실습3/products.html
+++ b/실습3/products.html
@@ -9,6 +9,54 @@
   <title>Shop Example</title>
 </head>
 <body>
- 
+  <div class="wrap">
+    <header>
+      <div class="container">
+        <h1>APPAREL SHOP</h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="products.html">PRODUCTS</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div style="height: 50px;"></div>
+    <div class="cards">
+      <div class="card">
+        <img src="https://picsum.photos/350/150" class="card-img">
+        <h2>T-Shirts</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos rem officia minus iusto esse, magni praesentium quis placeat deserunt magnam? Assumenda necessitatibus quos numquam libero nam voluptatem, in dolore rerum.</p>
+      </div>
+      <div class="card">
+        <img src="https://picsum.photos/350/150" class="card-img">
+        <h2>Slacks</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio animi autem suscipit natus minima, vel in dolorem veniam aliquid qui eaque harum unde itaque iure sint aspernatur ab voluptate at.</p>
+      </div>
+      <div class="card">
+        <img src="https://picsum.photos/350/150" class="card-img">
+        <h2>Jeans</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia repellat sunt quam, aliquid pariatur, blanditiis velit quasi voluptatem earum fugit repudiandae corrupti beatae in explicabo tempore, eligendi saepe culpa impedit.</p>
+      </div>
+    </div>
+    <div class="cards">
+      <div class="card">
+        <img src="https://picsum.photos/350/150" class="card-img">
+        <h2>Shoes</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique eligendi doloribus mollitia quidem libero voluptate voluptatibus sunt quo voluptates temporibus voluptatem quod aliquam qui, nulla praesentium! Assumenda aliquam accusamus provident?</p>
+      </div>
+      <div class="card">
+        <img src="https://picsum.photos/350/150" class="card-img">
+        <h2>Suits</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, ullam? Quasi sunt quos corrupti esse laborum. Facere, pariatur illum sunt eum fuga quaerat corrupti saepe recusandae, quae eveniet assumenda expedita?</p>
+      </div>
+      <div class="card">
+        <img src="https://picsum.photos/350/150" class="card-img">
+        <h2>Accessories</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam perferendis nulla earum praesentium! Distinctio placeat accusamus numquam odit a nemo commodi. Sapiente necessitatibus facere, dolorum ipsum voluptatum consequatur dolorem ipsa.</p>
+      </div>
+    </div>
+    <a class="top-btn" href="#"><img src="assets/up-arrow.png" width="30rem"></a>
+  </div>
 </body>
 </html>
