--- a/실습4/index.html
+++ b/실습4/index.html
@@ -4,12 +4,58 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/_reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <title>HPHK APPAREL</title>
 </head>
 <body>
- 
+  <header class="p-3 position-sticky top-0 d-flex justify-content-between align-items-center bg-light">
+    <h1 class="m-0 fs-5">APPAREL SHOP</h1>
+    <ul class="d-flex flex-row fs-5 m-0 list-unstyled">
+      <li class="px-3"><a class="text-decoration-none text-black" href="index.html">HOME</a></li>
+      <li class="px-3">PRODUCTS</li>
+    </ul>
+  </header>
+  <div class="top-btn">
+    <a href="#"><img src="assets/up-arrow.png" width="30rem"></a>
+  </div>
+  <div class="container-fluid p-0">
+    <div class="bg-image" style="background-image: url(assets/apparel.jpeg); height: 700px; background-repeat: no-repeat; background-size: cover;">
+    </div>
+    <div class="d-flex justify-content-center m-3">
+      <div class="m-3">
+        <img src="assets/apparel2.jpeg" class="float-right" style="width: 500px; height: auto; border-radius: 5%;">
+      </div>
+      <div class="col-4 m-3">
+        <h2 class="text-center">About Our Company</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, ratione in perferendis corporis, aliquid nulla dolorem maxime excepturi dolore modi corrupti. Necessitatibus tenetur eveniet ipsam placeat aut sit dignissimos aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dignissimos magnam ea accusamus praesentium impedit nihil eum dolores maxime accusantium ipsum similique, illum harum omnis, illo veniam obcaecati sunt laborum?</p>
+      </div>
+    </div>
+    <div class="row m-3">
+      <h2 class="text-center">More</h2>
+    </div>
+    <div class="d-flex justify-content-evenly mx-lg-5">
+      <div class="col text-center">
+        <img src="assets/email.png" style="width: 64px;">
+        <p class="m-0">Email Address</p>
+        <p>hphker@hphk.kr</p>
+      </div>
+      <div class="col text-center">
+        <img src="assets/telephone.png" style="width: 64px;">
+        <p class="m-0">Phone Number</p>
+        <p>010-1234-5678</p>
+      </div>
+      <div class="col text-center">
+        <img src="assets/location.png" style="width: 64px;">
+        <p class="m-0">Location</p>
+        <p>서울특별시</p>
+      </div>
+      <div class="col text-center">
+        <img src="assets/clock.png" style="width: 64px;">
+        <p class="m-0">Working Hours</p>
+        <p>9am - 6pm</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
