--- a/실습5/signup.html
+++ b/실습5/signup.html
@@ -13,7 +13,7 @@
     <form>
       <div class="mb-3">
         <label for="inputEmail1" class="form-label">이메일</label>
-        <input type="email" class="form-control" id="inputEmail1" aria-describedby="emailHelp">
+        <input type="email" class="form-control" id="inputEmail1" placeholder="name@example.com" aria-describedby="emailHelp">
         <div id="emailHelp" class="form-text">가입시 활용할 이메일 주소를 작성해주세요.</div>
       </div>
       <div class="mb-3">
