--- a/실습7/shop_item.html
+++ b/실습7/shop_item.html
@@ -10,27 +10,17 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
 </head>
-<style>
-  .banner{
-    background-image: url("shop_assets/3.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 20rem;
-    display: flex;
-    align-items: center;
-  }
-</style>
 <body>
   <!--NAV-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
-      <a class="navbar-brand" href="#!">YUSINSA</a>
+      <a class="navbar-brand" href="shop.html">YUSINSA</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="shop.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
@@ -52,75 +42,33 @@
       </div>
     </div>
   </nav>
-  <!--배너-->
-  <header class="banner">
+  <section class="py-5">
     <div class="container px-4 px-lg-5 my-5">
-      <div class="text-center text-white">
-        <h1 class="display-4 fw-bolder">YUSINSA</h1>
-        <p class="lead fw-normal text-white-50 mb-0">FASHION WEB MAGAZINE / LIFE STYLE SELECT SHOP</p>
+      <div class="row gx-4 gx-lg-5 align-items-center">
+        <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="shop_assets/son.png" alt="..." /></div>
+        <div class="col-md-6">
+          <div class="small mb-1">NB27296HR</div>
+          <h1 class="display-5 fw-bolder"> CALVIN KLEIN UNDERWEAR</h1>
+          <div class="fs-5 mb-5">
+            <span class="text-decoration-line-through">$45.00</span>
+            <span>$40.00</span>
+          </div>
+          <p class="lead">2022년 가을, 캘빈클라인 언더웨어의 새로운 앰배서더로 손흥민이 함께합니다. 손흥민이 보여주는 셀프 컨피던스와 자신감.</p>
+          <div class="d-flex justify-content-end py-5">
+            <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
+            <button class="btn btn-outline-dark flex-shrink-0" type="button">
+              <i class="bi-cart-fill me-1"></i>
+              장바구니 넣기
+            </button>
+          </div>
+        </div>
       </div>
     </div>
-  </header>
-  <!--상품-->
-  <section class="py-5">
+  </section>
+  <!--related-->
+  <section class="py-5 bg-light">
     <div class="container px-4 px-lg-5 mt-5">
       <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-        <div class="col mb-5">
-          <div class="card h-100">
-            <img class="card-img-top" src="shop_assets/2022090115052900000070811.jpg" alt="..." />
-            <div class="card-body p-4">
-                <div class="text-center">
-                    <h5 class="fw-bolder">캘빈클라인 언더웨어 × 손흥민</h5>
-                    <span style="font-size: 12px; color: gray;">2022년 가을, 캘빈클라인 언더웨어의 새로운 앰배서더로 손흥민이 함께합니다. 손흥민이 보여주는 셀프 컨피던스와 자신감.</span>
-                </div>
-            </div>
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="shop_item.html">더 보기</a></div>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-5">
-          <div class="card h-100">
-            <img class="card-img-top" src="shop_assets/2022090108273400000077937.jpg" alt="..." />
-            <div class="card-body p-4">
-                <div class="text-center">
-                    <h5 class="fw-bolder">리 × 엔지니어드 가먼츠 협업 컬렉션</h5>
-                    <span style="font-size: 12px; color: gray;">현대적인 감각으로 재해석한 리 × 엔지니어드 가먼츠 협업 컬렉션을 주목하세요.</span>
-                </div>
-            </div>
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">더 보기</a></div>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-5">
-          <div class="card h-100">
-            <img class="card-img-top" src="shop_assets/2022083110434200000039598.jpg" alt="..." />
-            <div class="card-body p-4">
-                <div class="text-center">
-                    <h5 class="fw-bolder">ROCK IS DEAD</h5>
-                    <span style="font-size: 12px; color: gray;">파격적인 록 시크 감성으로 선보이는 비바스튜디오 22 F/W 컬렉션 발매.</span>
-                </div>
-            </div>
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">더 보기</a></div>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-5">
-          <div class="card h-100">
-            <img class="card-img-top" src="shop_assets/2022090515463300000041046.jpg" alt="..." />
-            <div class="card-body p-4">
-                <div class="text-center">
-                    <h5 class="fw-bolder">윈드브레이커의 계절</h5>
-                    <span style="font-size: 12px; color: gray;">다양하게 활용할 수 있는 엘엠씨 × 까웨 컬래버레이션 윈드브레이커 재킷을 한정 발매로 만나자.</span>
-                </div>
-            </div>
-            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">더 보기</a></div>
-            </div>
-          </div>
-        </div>
         <div class="col mb-5">
           <div class="card h-100">
             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">10% Sale</div>
@@ -212,8 +160,5 @@
       </div>
     </div>
   </section>
-  <footer class="py-5 bg-dark">
-    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
-  </footer>
 </body>
 </html>
