--- a/실습7/shop_item.html
+++ b/실습7/shop_item.html
@@ -68,6 +68,7 @@
   <!--related-->
   <section class="py-5 bg-light">
     <div class="container px-4 px-lg-5 mt-5">
+      <h2 class="fw-bolder mb-4">이 상품과 유사한 스타일</h2>
       <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
         <div class="col mb-5">
           <div class="card h-100">
